# prestige-program

./: .gitignore  Anchor.toml  Cargo.toml  package.json
app/: const.ts  idl.json  seed-util.ts  util.ts
assets/: xp.json
programs/prestige-program/: Cargo.toml
programs/prestige-program/src/: lib.rs
programs/prestige-program/src/instructions/: create_user.rs  init.rs  mint_xp.rs  mod.rs
programs/prestige-program/src/state/: mint.rs  mod.rs  user.rs
python-client/: instruction.py  prestige_cli.py  processor.py  setup.py  state.py
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: prestige-program.ts
wallet/: master.json
